ajustes de pendientes
